<resources>
    <string name="app_name">Delishio</string>
    <string name="meal">Meals</string>
    <string name="meal_plan">Plans</string>
    <string name="shopping_list">Shopping</string>

    <string name="meal_name">Name</string>
    <string name="meal_ingredient">Ingredient</string>
    <string name="add_meal_ingredient">Add Ingredient</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity</string>
    <string name="ingredients">Ingredients:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_galery">Choose from galery</string>
    <string name="search_internet">Search on internet</string>
    <string name="search_example_cupcakes">Search example: Cupcakes</string>
    <string name="meal_plan_name">Name</string>
    <string name="add_meals">Add meals</string>
    <string name="select_picture">Select Picture</string>
    <string name="search_images">Search images</string>
    <string name="delishio">Delishio</string>
    <string name="shopping_list_name">Name</string>
    <string name="description_search_internet">Search image on internet</string>
    <string name="description_search_galery">Search image on galery</string>
    <string name="description_meal_image">Meal image</string>
    <string name="description_image_result">Search result image</string>
    <string name="description_shopping_list_item">Shopping list item</string>
    <string name="shopping_list_added_to_widget">Shopping list added to widget</string>
    <string name="search">Search</string>
    <string name="description_save_meal">Save meal</string>
    <string name="description_remove_ingredient">Remove ingredient</string>
    <string name="description_save_shopping_list">Save shopping list</string>
    <string name="description_generate_shopping_list">Generate shopping list</string>
    <string name="description_add_new">Add new</string>
    <string name="description_save_meal_plan">Save meal plan</string>

    <string-array name="units">
        <item>no unit</item>
        <item>grams</item>
        <item>milliliters</item>
        <item>cups</item>
        <item>teaspoons</item>
        <item>tablespoons</item>
        <item>some</item>
    </string-array>

</resources>
