<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ingredientsInputLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ingredientsInputLinearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ingredienQuantityLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/quantity">

            <EditText
                android:id="@+id/ingredientRowQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/ingredientRowUnitsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:entries="@array/units"
            android:paddingEnd="12dp"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dialog" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mealIngredientLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:hint="@string/meal_ingredient">

            <EditText
                android:id="@+id/ingredientRowName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/removeIngredientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="3"
        android:clickable="true"
        app:elevation="2dp"
        android:focusable="true"
        android:src="@drawable/ic_remove_white_24dp"
        app:backgroundTint="@color/red"
        app:fabSize="mini"
        android:contentDescription="@string/description_remove_ingredient"/>

</LinearLayout>