<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddMealActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mealPicture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/overlay_change_picture"
                android:foregroundGravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/meal_default"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_meal_image"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mealNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/meal_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealPicture">

                <EditText
                    android:id="@+id/mealNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/ingredientsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealNameInputLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/ingredients"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ingredientsInputLinearLayout0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/ingredienQuantityLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:hint="@string/quantity">

                            <EditText
                                android:id="@+id/ingredienQuantity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal" />

                        </android.support.design.widget.TextInputLayout>

                        <Spinner
                            android:id="@+id/ingredientUnitsSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/spinner_background"
                            android:entries="@array/units"
                            android:paddingEnd="12dp"
                            android:spinnerMode="dialog" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/mealIngredientLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="16"
                            android:hint="@string/meal_ingredient">

                            <EditText
                                android:id="@+id/mealIngredientName0"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/addMeal_addIngredientBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="3"
                        android:src="@drawable/icon_add"
                        app:backgroundTint="@color/green"
                        android:clickable="true"
                        app:elevation="2dp"
                        android:focusable="true"
                        app:fabSize="mini" />

                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addMeal_saveMealfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_check"
        app:backgroundTint="@color/green"
        android:contentDescription="@string/description_save_meal"/>

</android.support.design.widget.CoordinatorLayout>